Added OAuth2 plugin

--- a/default.conf
+++ b/default.conf
@@ -17,6 +17,9 @@
 
     # QGIS server config
 
+    # OAuth plugin
+    PassEnv OAUTH2_AUTHORIZATION_SERVICE_PROVIDER OAUTH2_CLIENT_ID OAUTH2_CLIENT_SECRET OAUTH2_AUTHENTICATE_URL OAUTH2_ACCESS_TOKEN_URL OAUTH2_SCOPE OAUTH2_VERIFY_URL
+
     # Longer timeout for WPS... default = 40
     FcgidIOTimeout 120
     FcgidInitialEnv LC_ALL "en_US.UTF-8"
