--- a/default.conf
+++ b/default.conf
@@ -17,8 +17,6 @@
 
     # QGIS server config
 
-    # OAuth plugin
-    PassEnv OAUTH2_AUTHORIZATION_SERVICE_PROVIDER OAUTH2_CLIENT_ID OAUTH2_CLIENT_SECRET OAUTH2_AUTHENTICATE_URL OAUTH2_ACCESS_TOKEN_URL OAUTH2_SCOPE OAUTH2_VERIFY_URL
 
     # Longer timeout for WPS... default = 40
     FcgidIOTimeout 120
@@ -30,6 +28,15 @@
     FcgidInitialEnv QGIS_SERVER_LOG_LEVEL 0
     FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
     FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
+    # OAuth plugin
+    FcgidInitialEnv OAUTH2_AUTHORIZATION_SERVICE_PROVIDER ${OAUTH2_AUTHORIZATION_SERVICE_PROVIDER}
+    FcgidInitialEnv OAUTH2_CLIENT_ID ${OAUTH2_CLIENT_ID}
+    FcgidInitialEnv OAUTH2_CLIENT_SECRET ${OAUTH2_CLIENT_SECRET}
+    FcgidInitialEnv OAUTH2_AUTHENTICATE_URL ${OAUTH2_AUTHENTICATE_URL}
+    FcgidInitialEnv OAUTH2_ACCESS_TOKEN_URL ${OAUTH2_ACCESS_TOKEN_URL}
+    FcgidInitialEnv OAUTH2_SCOPE ${OAUTH2_SCOPE}
+    FcgidInitialEnv OAUTH2_VERIFY_URL ${OAUTH2_VERIFY_URL}
+
     # Pass display number to QGIS Server instances
     FcgidInitialEnv DISPLAY ":99"
 
