--- a/default.conf
+++ b/default.conf
@@ -36,7 +36,8 @@
     FcgidInitialEnv OAUTH2_ACCESS_TOKEN_URL ${OAUTH2_ACCESS_TOKEN_URL}
     FcgidInitialEnv OAUTH2_SCOPE ${OAUTH2_SCOPE}
     FcgidInitialEnv OAUTH2_VERIFY_URL ${OAUTH2_VERIFY_URL}
-
+    # WPS plugin
+    FcgidInitialEnv PYWPS_CFG ${PYWPS_CFG}
     # Pass display number to QGIS Server instances
     FcgidInitialEnv DISPLAY ":99"
 
@@ -46,6 +47,16 @@
     SetEnv QGIS_SERVER_LOG_FILE ${APACHE_LOG_DIR}/qgis-cgi.log
     SetEnv QGIS_PLUGINPATH "/web/plugins"
     SetEnv QGIS_SERVER_LOG_LEVEL 0
+    # OAUTH plugin
+    SetEnv OAUTH2_AUTHORIZATION_SERVICE_PROVIDER ${OAUTH2_AUTHORIZATION_SERVICE_PROVIDER}
+    SetEnv OAUTH2_CLIENT_ID ${OAUTH2_CLIENT_ID}
+    SetEnv OAUTH2_CLIENT_SECRET ${OAUTH2_CLIENT_SECRET}
+    SetEnv OAUTH2_AUTHENTICATE_URL ${OAUTH2_AUTHENTICATE_URL}
+    SetEnv OAUTH2_ACCESS_TOKEN_URL ${OAUTH2_ACCESS_TOKEN_URL}
+    SetEnv OAUTH2_SCOPE ${OAUTH2_SCOPE}
+    SetEnv OAUTH2_VERIFY_URL ${OAUTH2_VERIFY_URL}
+    # WPS plugin
+    SetEnv PYWPS_CFG ${PYWPS_CFG}
     # Pass display number to QGIS Server instances
     SetEnv DISPLAY ":99"
 
