--- a/wps4qgis.cfg
+++ b/wps4qgis.cfg
@@ -29,21 +29,21 @@ contactinstructions=none
 [server]
 maxoperations=30
 maxinputparamlength=1024
-maxfilesize=3mb
+maxfilesize=30mb
 tempPath=/tmp
 processesPath=
 outputUrl=/wps/tmp
 #outputPath=/var/www/wps/wpsoutputs
 outputPath=/web/htdocs/wps/tmp
 debug=true # deprecated since 3.2, use logLevel instead
-logFile=/tmp/pywps.log
+logFile=/web/logs/pywps.log
 logLevel=INFO
 
 [qgis]
 qgisserveraddress=
 #####http://127.0.0.1:8081
 #processing_folder=/path/to/processes/processing that contains models, scripts and rscripts directory
-processing_folder=../../../../../../processing
+processing_folder=/web/wps
 #providers= providers list separated by comma
 providers=
 #algs_filter= algorithms filter
