--- a/default.conf
+++ b/default.conf
@@ -5,9 +5,8 @@
 
     #LogLevel info warn
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-
+    ErrorLog /dev/stderr
+    TransferLog /dev/stdout
 
     <Directory ${APACHE_DOCUMENTROOT}>
       Options +Indexes +FollowSymLinks
@@ -17,41 +16,40 @@
 
     # QGIS server config
 
-
     # Longer timeout for WPS... default = 40
     FcgidIOTimeout 120
     FcgidInitialEnv LC_ALL "en_US.UTF-8"
     FcgidInitialEnv PYTHONIOENCODING UTF-8
     FcgidInitialEnv LANG "en_US.UTF-8"
     FcgidInitialEnv QGIS_DEBUG 3
-    FcgidInitialEnv QGIS_SERVER_LOG_FILE ${APACHE_LOG_DIR}/qgis-fcgi.log
+    FcgidInitialEnv QGIS_SERVER_LOG_FILE ""
+    FcgidInitialEnv QGIS_SERVER_LOG_STDERR 1
     FcgidInitialEnv QGIS_SERVER_LOG_LEVEL 0
-    FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
-    FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
+    FcgidInitialEnv QGIS_SERVER_PARALLEL_RENDERING 1
+    #FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
+    #FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
+    FcgidInitialEnv HOME "/var/www"
     # Pass display number to QGIS Server instances
     FcgidInitialEnv DISPLAY ":99"
-
-    # For simple CGI: ignored by fcgid
-    SetEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
-    SetEnv QGIS_DEBUG 3
-    SetEnv QGIS_SERVER_LOG_FILE ${APACHE_LOG_DIR}/qgis-cgi.log
-    SetEnv QGIS_PLUGINPATH "/web/plugins"
-    SetEnv QGIS_SERVER_LOG_LEVEL 0
-     # Pass display number to QGIS Server instances
-    SetEnv DISPLAY ":99"
+    Header set Access-Control-Allow-Origin "*"
 
     # Needed for QGIS plugins auth
     <IfModule mod_fcgid.c>
         RewriteEngine on
         RewriteCond %{HTTP:Authorization} .
         RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+        FcgidConnectTimeout 20
+        IdleTimeout 300
+        BusyTimeout 300
+        ProcessLifeTime 7200
+        IPCConnectTimeout 300
+        IPCCommTimeout 7200
     </IfModule>
 
     ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
     <Directory "/usr/lib/cgi-bin">
       AllowOverride All
       Options +ExecCGI -MultiViews +FollowSymLinks
-      AddHandler cgi-script .cgi
       AddHandler fcgid-script .fcgi
       Require all granted
     </Directory>
