Updates for xenial and FEMA download bug, switched to nginx

--- a/default.conf
+++ b/default.conf
@@ -3,8 +3,7 @@
     ServerAdmin webmaster@localhost
     DocumentRoot ${APACHE_DOCUMENTROOT}
 
-    #LogLevel info warn
-
+    LogLevel info
     ErrorLog /dev/stderr
     TransferLog /dev/stdout
 
@@ -16,28 +15,30 @@
 
     # QGIS server config
 
-    # Longer timeout for WPS... default = 40
-    FcgidIOTimeout 120
-    FcgidInitialEnv LC_ALL "en_US.UTF-8"
-    FcgidInitialEnv PYTHONIOENCODING UTF-8
-    FcgidInitialEnv LANG "en_US.UTF-8"
-    FcgidInitialEnv QGIS_DEBUG 3
-    FcgidInitialEnv QGIS_SERVER_LOG_FILE ""
-    FcgidInitialEnv QGIS_SERVER_LOG_STDERR 1
-    FcgidInitialEnv QGIS_SERVER_LOG_LEVEL 0
-    FcgidInitialEnv QGIS_SERVER_PARALLEL_RENDERING 1
-    #FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
-    #FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
-    FcgidInitialEnv HOME "/var/www"
-    # Pass display number to QGIS Server instances
-    FcgidInitialEnv DISPLAY ":99"
     Header set Access-Control-Allow-Origin "*"
 
-    # Needed for QGIS plugins auth
     <IfModule mod_fcgid.c>
+        # Rewrite Needed for QGIS plugins auth
         RewriteEngine on
         RewriteCond %{HTTP:Authorization} .
         RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+        # Longer timeout for WPS... default = 40
+        FcgidIOTimeout 120
+        FcgidInitialEnv LC_ALL "en_US.UTF-8"
+        FcgidInitialEnv PYTHONIOENCODING UTF-8
+        FcgidInitialEnv LANG "en_US.UTF-8"
+        FcgidInitialEnv QGIS_DEBUG 0
+        #FcgidInitialEnv QGIS_SERVER_LOG_FILE "/tmp/qgis.log"
+        FcgidInitialEnv QGIS_SERVER_LOG_LEVEL "0"
+        FcgidInitialEnv QGIS_SERVER_LOG_STDERR "1"
+        FcgidInitialEnv QGIS_SERVER_PARALLEL_RENDERING "1"
+        #FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
+        #FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
+        FcgidInitialEnv HOME "/var/www"
+        # Pass display number to QGIS Server instances
+        FcgidInitialEnv DISPLAY ":99"
+
         FcgidConnectTimeout 20
         IdleTimeout 300
         BusyTimeout 300
