Demo with landing page

--- a/default.conf
+++ b/default.conf
@@ -1,20 +1,14 @@
 <VirtualHost *:80>
 
     ServerAdmin webmaster@localhost
-    DocumentRoot ${APACHE_DOCUMENTROOT}
 
-    LogLevel info
-    ErrorLog /dev/stderr
-    TransferLog /dev/stdout
+    #LogLevel info
+    LogLevel alert
+    TransferLog /proc/self/fd/1
+	ErrorLog /proc/self/fd/1
 
-    <Directory ${APACHE_DOCUMENTROOT}>
-      Options +Indexes +FollowSymLinks
-      AllowOverride All
-      Require all granted
-    </Directory>
 
     # QGIS server config
-
     Header set Access-Control-Allow-Origin "*"
 
     <IfModule mod_fcgid.c>
@@ -28,16 +22,13 @@
         FcgidInitialEnv LC_ALL "en_US.UTF-8"
         FcgidInitialEnv PYTHONIOENCODING UTF-8
         FcgidInitialEnv LANG "en_US.UTF-8"
-        FcgidInitialEnv QGIS_DEBUG 0
-        #FcgidInitialEnv QGIS_SERVER_LOG_FILE "/tmp/qgis.log"
         FcgidInitialEnv QGIS_SERVER_LOG_LEVEL "0"
         FcgidInitialEnv QGIS_SERVER_LOG_STDERR "1"
+        FcgidInitialEnv QGIS_SERVER_LANDING_PAGE_PROJECTS_DIRECTORIES "/qgis_projects/"
         FcgidInitialEnv QGIS_SERVER_PARALLEL_RENDERING "1"
-        #FcgidInitialEnv QGIS_CUSTOM_CONFIG_PATH "/web/projects/"
-        #FcgidInitialEnv QGIS_PLUGINPATH "/web/plugins"
-        FcgidInitialEnv HOME "/var/www"
         # Pass display number to QGIS Server instances
         FcgidInitialEnv DISPLAY ":99"
+        FcgidInitialEnv HOME "/"
 
         FcgidConnectTimeout 20
         IdleTimeout 300
@@ -47,13 +38,23 @@
         IPCCommTimeout 7200
     </IfModule>
 
+    <Directory "/">
+        RewriteEngine On
+        RewriteBase "/"
+        RewriteCond %{REQUEST_URI} !qgis_mapserv.fcgi
+        RewriteRule .* /cgi-bin/qgis_mapserv.fcgi$1 [L]
+        Allow from all
+    </Directory>
+
     ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
     <Directory "/usr/lib/cgi-bin">
       AllowOverride All
       Options +ExecCGI -MultiViews +FollowSymLinks
       AddHandler fcgid-script .fcgi
+      Allow from all
       Require all granted
     </Directory>
+
 
 </VirtualHost>
 
